@@ -5,6 +5,7 @@
             Snapraid logs are located in log directory and if needed can be consulted for any issues
             Added user info warnings for older version of Snapraid (New option in snapPERL.conf)
             Added Pre-Hash option for sync. Please see manual at http://www.snapraid.it/manual - Snapraid v10.0+ only (New option in snapPERL.conf)
+            Compares snapraid.conf against last run and warns if they are different
 
 11/05/2016 v0.2.2
             Added windows support. No help files yet but tested and working. Must have ActivePerl / Strawberry Perl or DWIM Perl installed
